--- a/src/static/css/forum.css
+++ b/src/static/css/forum.css
@@ -142,7 +142,7 @@ body.forum #photo-sidebar {
   -webkit-transition: width 0.5s ease;
   transition: width 0.5s ease;
 }
-/* line 22, ../../sass/partials/forum/_albums.scss */
+/* line 23, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar input,
 body.forum #photo-sidebar select {
   width: 100%;
@@ -151,24 +151,27 @@ body.forum #photo-sidebar select {
   -webkit-transition: width 0.5s ease;
   transition: width 0.5s ease;
 }
-/* line 28, ../../sass/partials/forum/_albums.scss */
+/* line 29, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar.open {
   width: 20%;
 }
-/* line 31, ../../sass/partials/forum/_albums.scss */
+/* line 32, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar.open + .lid {
-  display: none;
+  left: 20%;
+  visibility: hidden;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
 }
-/* line 36, ../../sass/partials/forum/_albums.scss */
+/* line 39, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar.closed {
   width: 0;
   padding: 0;
 }
-/* line 39, ../../sass/partials/forum/_albums.scss */
+/* line 42, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar.closed > * {
   display: none;
 }
-/* line 44, ../../sass/partials/forum/_albums.scss */
+/* line 47, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar + .lid {
   background: rgba(0, 102, 153, 0.87);
   color: #FFFFFF;
@@ -189,29 +192,33 @@ body.forum #photo-sidebar + .lid {
   -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4), 0 10px 14px 0 rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4), 0 10px 14px 0 rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4), 0 10px 14px 0 rgba(0, 0, 0, 0.3);
+  -moz-transition: opacity 0.5s linear, left 0.5s ease, visibility 0.5s linear;
+  -o-transition: opacity 0.5s linear, left 0.5s ease, visibility 0.5s linear;
+  -webkit-transition: opacity 0.5s linear, left 0.5s ease, visibility 0.5s linear;
+  transition: opacity 0.5s linear, left 0.5s ease, visibility 0.5s linear;
 }
-/* line 62, ../../sass/partials/forum/_albums.scss */
+/* line 66, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-sidebar + .lid .fa {
   line-height: 50px;
 }
-/* line 70, ../../sass/partials/forum/_albums.scss */
+/* line 74, ../../sass/partials/forum/_albums.scss */
 body.forum .open-close:hover {
   cursor: pointer;
 }
-/* line 75, ../../sass/partials/forum/_albums.scss */
+/* line 79, ../../sass/partials/forum/_albums.scss */
 body.forum h2 {
   color: #FFFFFF;
 }
-/* line 79, ../../sass/partials/forum/_albums.scss */
+/* line 83, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-list {
   list-style: none;
   margin: 0;
 }
-/* line 83, ../../sass/partials/forum/_albums.scss */
+/* line 87, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-list .album-photo {
   margin: 5px 0;
 }
-/* line 86, ../../sass/partials/forum/_albums.scss */
+/* line 90, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-list .album-photo a {
   display: block;
   max-width: 100%;
@@ -219,7 +226,7 @@ body.forum #photo-list .album-photo a {
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4), 0 5px 7px 0 rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.4), 0 5px 7px 0 rgba(0, 0, 0, 0.3);
 }
-/* line 92, ../../sass/partials/forum/_albums.scss */
+/* line 96, ../../sass/partials/forum/_albums.scss */
 body.forum #photo-list .album-photo img {
   max-width: 100%;
 }
